<resources>
    <string name="app_name">TTS Util</string>
    <string name="app_name_long">Text-to-Speech Utility</string>
    <string name="tts_input_label">Enter text to synthesize…</string>
    <string name="read_text_fragment_label">Read text</string>
    <string name="read_text_fragment_desc">Enter text below and press the \'Play\' button to have it spoken with text-to-speech.  To enable automatic playback, see the application\'s \'Playback on Input\' setting.\n\nThe \'Save\' button may be used to synthesize and write the text to a wave file.</string>
    <string name="read_clipboard_fragment_label">Read clipboard</string>
    <string name="read_clipboard_fragment_desc">Press the \'Play\' button to have clipboard text spoken with text-to-speech.  To enable automatic playback, see the application\'s \'Playback on Input\' setting.\n\nThe \'Save\' button may be used to synthesize and write the text to a wave file.  The \'Paste\' button may be used to update the text field.</string>
    <string name="read_files_fragment_label">Read to/from files</string>
    <string name="read_files_fragment_desc">This part of the application may be used to process text files using text-to-speech.\n\nChoose one or more text files from storage and press the \'Play\' button to have their contents read in order or the \'Save\' button to have them transcribed to wave files.</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="edit_read_activity_label">Edit &amp; read text</string>
    <string name="about_activity_label">About TTS Util</string>
    <string name="status_text_field">Status: %1$s</string>
    <string name="status_text_idle">Idle</string>
    <string name="status_text_reading_text">Reading text %1$s</string>
    <string name="status_text_writing_file">Writing file %1$s</string>
    <string name="status_text_processing_file">Processing file %1$s</string>
    <string name="status_text_task_stopped">stopped</string>
    <string name="remaining_tasks_field">Remaining tasks: %1$d</string>
    <string name="play_button">Play text</string>
    <string name="stop_button">Stop</string>
    <string name="paste_button">Paste</string>
    <string name="clear_input_button">Clear input</string>
    <string name="choose_dir_button">Choose directory</string>
    <string name="choose_file_button">Choose file</string>
    <string name="play_file_button">Play from file</string>
    <string name="save_button">Save</string>
    <string name="mem_button_1">Memory 1</string>
    <string name="mem_button_2">Memory 2</string>
    <string name="mem_button_3">Memory 3</string>
    <string name="mem_button_4">Memory 4</string>
    <string name="mem_button_5">Memory 5</string>
    <string name="about_version">TTS Util Version %1$s (%2$d)</string>
    <string name="about_copyright" translatable="false">&#169; 2019-25 - Dane Finlay</string>
    <string name="about_app">TTS Util is open source software licensed under the %1$s license. The application source code is available from %2$s.</string>
    <string name="link_apache2" translatable="false">&lt;a href=&quot;https://www.apache.org/licenses/LICENSE-2.0.html&quot;&gt;Apache 2.0&lt;/a&gt;</string>
    <string name="link_source_code" translatable="false">&lt;a href=&quot;https://github.com/Danesprite/tts-util-app&quot;&gt;GitHub&lt;/a&gt;</string>
    <string name="about_acknowledgements_title">Acknowledgments &amp; Licenses</string>
    <string name="about_acknowledgements_msg">Parts of the following projects were used in the development of this application:</string>
    <string name="about_ack_material_design_icons">&#8226; %1$s (%2$s) — icons used in this application</string>
    <string name="link_material_design_icons" translatable="false">&lt;a href=&quot;https://material.io/resources/icons/&quot;&gt;Google\'s Material Design Icons&lt;/a&gt;</string>
    <string name="about_ack_kotlin">&#8226; %1$s (%2$s) — programming language used</string>
    <string name="link_kotlin" translatable="false">&lt;a href=&quot;https://kotlinlang.org/&quot;&gt;Kotlin&lt;/a&gt;</string>
    <string name="about_ack_free_otp">&#8226; %1$s (%2$s) — portions used to create this About section</string>
    <string name="link_freeotp" translatable="false">&lt;a href=&quot;https://freeotp.github.io&quot;&gt;FreeOTP&lt;/a&gt;</string>
    <string name="about_translations_title">Translations</string>
    <string name="about_translations_msg">TTS Util has been translated into the following languages:</string>
    <string name="about_translation_chinese">&#8226; Chinese (Simplified) — translation by GitHub user %1$s</string>
    <string name="link_mahongyin" translatable="false">&lt;a href=&quot;https://github.com/1976222027&quot;&gt;Mahongyin&lt;/a&gt;</string>
    <string name="alert_positive_message_1">Okay</string>
    <string name="alert_negative_message_1">Cancel</string>
    <string name="alert_positive_message_2">Yes</string>
    <string name="alert_negative_message_2">No</string>
    <string name="grant_permission_positive_message">Grant permission</string>
    <string name="no_tts_data_alert_title">Missing Language TTS Data</string>
    <string name="no_tts_data_alert_message">Data for the language %1$s is missing.\n\nWould you like to open the %2$s settings screen to download it?</string>
    <string name="no_engine_available_message">No text-to-speech engine is available.</string>
    <string name="unavailable_file_dialog_title">File Not Found</string>
    <string name="unavailable_file_dialog_message_1">The chosen file could not be found. Maybe it has been deleted or renamed?\n\nWould you like to choose another one?</string>
    <string name="unavailable_file_dialog_message_2">One or more of the chosen files could not be found. Maybe they have been deleted or renamed?\n\nWould you like to select other files?</string>
    <string name="no_file_chosen_dialog_title">No File Chosen</string>
    <string name="no_file_chosen_dialog_message">No file has been chosen.\n\nWould you like to choose one?</string>
    <string name="unavailable_dir_dialog_title">Directory not found</string>
    <string name="unavailable_dir_dialog_message">The specified output directory could not be found.  Maybe it has been deleted or renamed?\n\nChoose another?</string>
    <string name="unwritable_out_dir_dialog_title">Unwritable output directory</string>
    <string name="unwritable_out_dir_dialog_message">The application cannot create files in the current output directory.\n\nWould you like to choose a different directory?</string>
    <string name="write_to_file_alert_title">Write to Wave File</string>
    <string name="write_to_file_alert_message_1">The current file is \"%1$s\". The content of this file will be synthesized, written to \"%2$s\" and placed into %3$s.\n\nIs this okay?</string>
    <string name="write_to_file_alert_message_2">The content of \"%1$s\" and %2$d other %3$s will be synthesized into wave files and placed into %4$s.\n\nIs this okay?</string>
    <string name="write_to_file_alert_message_3">The current content of the text field will be synthesized, written to \"%1$s\" and placed into %2$s.\n\nIs this okay?</string>
    <string name="write_to_file_message_success">The file was successfully synthesized as \"%1$s\".</string>
    <string name="write_to_file_message_failure">Failed to create wave file \"%1$s\".</string>
    <string name="no_storage_permission_title">No Write Storage Permission</string>
    <string name="no_storage_permission_message">Permission to write to storage was not granted.  The application needs write access in order to save the wave file to storage. \n\nWould you like to grant permission?</string>
    <string name="no_notifications_permission_title">No Notifications Permission</string>
    <string name="no_notifications_permission_message">Permission to post notifications has not been granted.  This application uses notifications to allow control of ongoing text-to-speech synthesis while it is in the background.    Would you like to grant permission?</string>
    <string name="reinit_confirmation_title">Reinitialize text-to-speech?</string>
    <string name="reinit_confirmation_message">A task is currently in progress. Do you wish to reinitialize text-to-speech and stop it?</string>
    <string name="output_wave_filename">output</string>
    <string name="chosen_file_label">File(s) to read text from:</string>
    <string name="no_file_chosen_dec">*No file chosen*</string>
    <string name="multiple_chosen_files">%1$s and %2$d other %3$s</string>
    <string name="default_output_dir">Internal shared storage</string>
    <string name="generic_output_dir">the specified directory</string>
    <string name="fallback_filename">&lt;file&gt;</string>
    <string name="file_chooser_title">Select a File…</string>
    <string name="dir_chooser_title">Select a Directory…</string>
    <string name="no_file_manager_msg">No file manager application found.</string>
    <string name="menu_about">About</string>
    <string name="menu_tts_settings">System Text-to-Speech Settings</string>
    <string name="menu_reinitialize_tts">Reinitialize Text-to-Speech</string>
    <string name="read_clipboard_shortcut">Read from clipboard</string>
    <string name="edit_read_clipboard_shortcut">Edit &amp; read from clipboard</string>
    <string name="read_text_source_description">text content</string>
    <string name="read_clipboard_source_description">clipboard content</string>
    <string name="sample_text_source_description">sample text</string>
    <string name="reading_notification_title">Speech in Progress</string>
    <string name="synthesis_notification_title">File Synthesis in Progress</string>
    <string name="post_synthesis_notification_title">Processing synthesized wave file</string>
    <string name="begin_reading_source_message">Reading from %1$s…</string>
    <string name="begin_synthesizing_source_message">Synthesizing wave file from %1$s…</string>
    <string name="begin_processing_source_message">Processing synthesized %1$s wave file…</string>
    <string name="progress_notification_text">%1$s\n%2$d %3$s remaining.</string>
    <string name="tts_not_ready_message">Text-to-speech is not ready. Try again in a moment.</string>
    <string name="tts_initializing_message">Initializing text-to-speech…</string>
    <string name="tts_busy_message">Cannot perform operation: %1$s.</string>
    <string name="unavailable_out_dir_message">The specified output directory could not be found.</string>
    <string name="unavailable_input_src_message">Cannot read from the selected file.</string>
    <string name="unwritable_out_dir_message">Cannot write to the output file.</string>
    <string name="synthesis_error_msg_generic">There was an error during text synthesis.</string>
    <string name="synthesis_error_msg_synthesis">The text-to-speech engine failed to synthesize the text.</string>
    <string name="synthesis_error_msg_service">The text-to-speech service failed unexpectedly.</string>
    <string name="pref_tts_engine_category">Text-to-Speech (TTS) Settings</string>
    <string name="pref_tts_engine">TTS Engine</string>
    <string name="pref_tts_engine_summary">Select the TTS engine.</string>
    <string name="pref_tts_voice">TTS Language/Voice</string>
    <string name="pref_tts_voice_summary">Select the TTS language/voice.</string>
    <string name="pref_tts_pitch">Speech Pitch</string>
    <string name="pref_tts_pitch_summary">Select the pitch/tone of the synthesized voice.</string>
    <string name="pref_tts_speech_rate">Speech Rate</string>
    <string name="pref_tts_speech_rate_summary">Select the speed of the synthesized voice.</string>
    <string name="pref_tts_system_settings">System Text-to-Speech Settings</string>
    <string name="pref_tts_system_settings_summary">Open the System Text-to-Speech Settings.</string>
</resources>