<?xml version="1.0" encoding="utf-8"?>
<!--
   - TTS Util
   -
   - Authors: Dane Finlay <Danesprite@posteo.net>
   -
   - Copyright (C) 2019 Dane Finlay
   -
   - Licensed under the Apache License, Version 2.0 (the "License");
   - you may not use this file except in compliance with the License.
   - You may obtain a copy of the License at
   -
   - http://www.apache.org/licenses/LICENSE-2.0
   -
   - Unless required by applicable law or agreed to in writing, software
   - distributed under the License is distributed on an "AS IS" BASIS,
   - WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   - See the License for the specific language governing permissions and
   - limitations under the License.
   -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_fragment_label" >

    <PreferenceCategory
        android:title="@string/pref_tts_engine_category" >

        <Preference
            android:key="pref_tts_engine"
            android:title="@string/pref_tts_engine"
            android:summary="@string/pref_tts_engine_summary"
            android:icon="@drawable/ic_apps" />

        <Preference
            android:key="pref_tts_voice"
            android:title="@string/pref_tts_voice"
            android:summary="@string/pref_tts_voice_summary"
            android:icon="@drawable/ic_language" />

        <Preference
            android:key="pref_tts_pitch"
            android:title="@string/pref_tts_pitch"
            android:summary="@string/pref_tts_pitch_summary"
            android:icon="@drawable/ic_height" />

        <Preference
            android:key="pref_tts_speech_rate"
            android:title="@string/pref_tts_speech_rate"
            android:summary="@string/pref_tts_speech_rate_summary"
            android:icon="@drawable/ic_speed" />

        <Preference
            android:key="pref_tts_system_settings"
            android:title="@string/pref_tts_system_settings"
            android:summary="@string/pref_tts_system_settings_summary"
            android:icon="@android:drawable/ic_menu_preferences" />

    </PreferenceCategory>

</PreferenceScreen>
