<?xml version="1.0" encoding="utf-8"?>
<!--
   - TTS Util
   -
   - Authors: Dane Finlay <Danesprite@posteo.net>
   -
   - Copyright (C) 2019 Dane Finlay
   -
   - Licensed under the Apache License, Version 2.0 (the "License");
   - you may not use this file except in compliance with the License.
   - You may obtain a copy of the License at
   -
   - http://www.apache.org/licenses/LICENSE-2.0
   -
   - Unless required by applicable law or agreed to in writing, software
   - distributed under the License is distributed on an "AS IS" BASIS,
   - WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   - See the License for the specific language governing permissions and
   - limitations under the License.
   -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.AboutActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_version"
            android:text="@string/about_version"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_copyright"
            android:text="@string/about_copyright"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toBottomOf="@id/about_version"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_app"
            android:text="@string/about_app"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/about_copyright"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_acknowledgements_title"
            android:text="@string/about_acknowledgements_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/about_app"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_acknowledgements_msg"
            android:text="@string/about_acknowledgements_msg"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintTop_toBottomOf="@id/about_acknowledgements_title"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_ack_material_design_icons"
            android:text="@string/about_ack_material_design_icons"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_acknowledgements_msg"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_ack_kotlin"
            android:text="@string/about_ack_kotlin"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_ack_material_design_icons"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_ack_anko"
            android:text="@string/about_ack_anko"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_ack_kotlin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_ack_free_otp"
            android:text="@string/about_ack_free_otp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_ack_anko"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
